--- a/ajax.html
+++ b/ajax.html
@@ -28,7 +28,7 @@
 </head>
 
 <body class="bg-black text-white">
-    <h1 class="text-center">github users with odd id</h1>
+    <h1 class="text-center mt-5">github users with odd id</h1>
     <div class="text-center m-auto w-25 mt-5">
         <button class="btn btn-primary">Get Data</button>
     </div>
