--- a/ajax.html
+++ b/ajax.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,7 +11,6 @@
             margin: 0;
             padding: 0;
         }
-
         body {
             height: 100vh;
         }
@@ -26,17 +24,13 @@
         }
     </style>
 </head>
-
 <body class="bg-black text-white">
     <h1 class="text-center mt-5">github users with odd id</h1>
     <div class="text-center m-auto w-25 mt-5">
         <button class="btn btn-primary">Get Data</button>
     </div>
-    <ul id="users" class="mt-5 border w-25 m-auto">
-    </ul>
-
+    <ul id="users" class="mt-5 border w-25 m-auto"></ul>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="./ajax.js"></script>
 </body>
-
 </html>
