--- a/ajax.html
+++ b/ajax.html
@@ -6,14 +6,8 @@
     <title>github ajax</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
-        * {
-            box-sizing: border-box;
-            margin: 0;
-            padding: 0;
-        }
-        body {
-            height: 100vh;
-        }
+        * {box-sizing: border-box;margin: 0;padding: 0;}
+        body {height: 100vh;}
         li{
             margin-bottom: 20px;
             height: 70px;
